[package]
name = "shuttle-aws-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.2", features = ["hardcoded-credentials"] }
serde = { version = "1.0.195", features = ["derive"] }
shuttle-service = "0.36.0"
tokio = "1.35.1"
